# weav-server-ai-adapter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs-pages.yml
doc/: docusaurus.config.js  package.json
doc/docs/: intro.md
doc/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: intro.md
doc/i18n/zh-Hans/docusaurus-plugin-content-pages/: index.md
doc/src/pages/: index.md
tests/: test_runtime.py
weav_server_ai_adapter/: __init__.py  runtime.py
